--- a/.github/workflows/generate-code.yml
+++ b/.github/workflows/generate-code.yml
@@ -16,15 +16,15 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      
+
       - name: Download the Swagger file
         uses: wei/wget@v1
         with:
           args: -O .openapi-config/swagger.json https://api.ekm.net/swagger/v0/swagger.json
-          
+
       - name: Replace the duplicate operationId
-        run: sed -i 's/ProductVariants_Get/ProductVariants_GetProductVariant/' .openapi-config/swagger.json
-      
+        run: sed -i '0,/"ProductVariants_Get"/{s/"ProductVariants_Get"/"ProductVariants_GetProductVariant"/}' .openapi-config/swagger.json
+
       - name: Generate Client Library w/ the OpenAPITools Generator
         uses: triaxtec/openapitools-generator-action@v1.0.0
         with:
