--- a/.github/workflows/generate-code.yml
+++ b/.github/workflows/generate-code.yml
@@ -43,10 +43,12 @@ jobs:
         env:
           TAG_VERSION: ${{ github.event.inputs.version }}
 
-      - name: Update name in composer.json
+      - name: Replace tokens in files
         run: |
           sed -i 's/GIT_USER_ID/mrstebo/' php-client/composer.json
           sed -i 's/GIT_REPO_ID/ekm-php/' php-client/composer.json
+          sed -i 's/GIT_USER_ID/mrstebo/' php-client/README.md
+          sed -i 's/GIT_REPO_ID/ekm-php/' php-client/README.md
 
       - name: Copy files from php-client
         run: |
