--- a/.github/workflows/generate-code.yml
+++ b/.github/workflows/generate-code.yml
@@ -50,6 +50,10 @@ jobs:
           sed -i 's/GIT_USER_ID/mrstebo/' php-client/README.md
           sed -i 's/GIT_REPO_ID/ekm-php/' php-client/README.md
 
+      - name: Update Guzzle package
+        run: |
+          sed -i 's/"guzzlehttp/guzzle": "^6.2"/"guzzlehttp/guzzle": "^7.0"/' php-client/composer.json
+
       - name: Copy files from php-client
         run: |
           for x in $(ls php-client -A); do
